--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
+    "babel-plugin-styled-components": "^2.0.7",
     "prettier": "^2.6.2"
   }
 }
