--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "babel-plugin-macros": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -30,6 +31,8 @@
     "styled-components": "^5"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
