--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stefan-girlich.github.io",
   "version": "0.1.0",
-  "homepage": "https://stefan-girlich.github.io/stefan-girlich.github.io",
+  "homepage": "https://stefan-girlich.github.io",
   "private": true,
   "dependencies": {
     "@fontsource/montserrat": "^4.5.7",
